src/snapshots/iroha_explorer__repo__tests__filter_isi_by_status.snap
---
source: src/repo.rs
expression: data.pagination
---
Pagination {
    page: BigInt(
        4,
    ),
    per_page: BigInt(
        10,
    ),
    total_pages: BigInt(
        4,
    ),
    total_items: BigInt(
        38,
    ),
}
