src/snapshots/iroha_explorer__repo__tests__find_an_asset.snap
---
source: src/repo.rs
expression: mapped
---
{
  "id": "rose##ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland",
  "value": "13"
}
