src/snapshots/iroha_explorer__repo__tests__list_assets.snap
---
source: src/repo.rs
expression: data
---
Page {
    pagination: Pagination {
        page: PositiveInteger(
            1,
        ),
        per_page: PositiveInteger(
            10,
        ),
        total_pages: 1,
        total_items: 3,
    },
    items: [
        Asset {
            id: AssetId(
                AsText(
                    cabbage#garden_of_live_flowers#ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland,
                ),
            ),
            value: Json(
                Numeric {
                    inner: 44,
                },
            ),
        },
        Asset {
            id: AssetId(
                AsText(
                    rose##ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland,
                ),
            ),
            value: Json(
                Numeric {
                    inner: 13,
                },
            ),
        },
        Asset {
            id: AssetId(
                AsText(
                    rose##ed0120DC3C3FE8DAD83DE7D3C61E21EBC3B25500B0880B894EF75FC385B1DA7203F71C@wonderland,
                ),
            ),
            value: Json(
                Numeric {
                    inner: 100000,
                },
            ),
        },
    ],
}
