src/snapshots/iroha_explorer__repo__tests__list_assets_definitions.snap
---
source: src/repo.rs
expression: data
---
Page {
    pagination: Pagination {
        page: BigInt(
            1,
        ),
        per_page: BigInt(
            10,
        ),
        total_pages: BigInt(
            1,
        ),
        total_items: BigInt(
            1,
        ),
    },
    items: [
        AssetDefinition {
            id: AssetDefinitionId(
                AsText(
                    rose#wonderland,
                ),
            ),
            owned_by: AccountId(
                AsText(
                    ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland,
                ),
            ),
            logo: None,
            metadata: Metadata(
                Some(
                    Json(
                        Metadata(
                            {},
                        ),
                    ),
                ),
            ),
            mintable: Infinitely,
            assets: 2,
        },
    ],
}
