src/snapshots/iroha_explorer__repo__tests__list_blocks-2.snap
---
source: src/repo.rs
expression: meta
---
17,1,1
16,1,1
15,1,0
14,1,1
13,1,0
12,1,0
11,1,0
10,1,1
9,1,0
8,1,0
7,1,0
6,1,0
5,1,0
3,1,0
1,4,0
