src/snapshots/iroha_explorer__repo__tests__list_blocks.snap
---
source: src/repo.rs
expression: data.pagination
---
Pagination {
    page: PositiveInteger(
        2,
    ),
    per_page: PositiveInteger(
        10,
    ),
    total_pages: 2,
    total_items: 15,
}
