src/snapshots/iroha_explorer__repo__tests__list_domains.snap
---
source: src/repo.rs
expression: mapped
---
{
  "pagination": {
    "page": 1,
    "per_page": 10,
    "total_pages": 1,
    "total_items": 4
  },
  "items": [
    {
      "id": "garden_of_live_flowers",
      "logo": null,
      "metadata": {},
      "owned_by": "ed01204164BF554923ECE1FD412D241036D863A6AE430476C898248B8237D77534CFC4@genesis",
      "accounts": 1,
      "assets": 1,
      "nfts": 0
    },
    {
      "id": "genesis",
      "logo": null,
      "metadata": {},
      "owned_by": "ed01204164BF554923ECE1FD412D241036D863A6AE430476C898248B8237D77534CFC4@genesis",
      "accounts": 1,
      "assets": 0,
      "nfts": 0
    },
    {
      "id": "looking_glass",
      "logo": "/ipns/QmSrPmbaUKA3ZodhzPWZnpFgcPMFWF4QsxXbkWfEptTBJd",
      "metadata": {
        "important_data": [
          "secret-code",
          1,
          2,
          3
        ],
        "very_important_data": {
          "very": {
            "important": {
              "data": {
                "is": {
                  "deep": {
                    "inside": 42
                  }
                }
              }
            }
          }
        }
      },
      "owned_by": "ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland",
      "accounts": 1,
      "assets": 0,
      "nfts": 0
    },
    {
      "id": "wonderland",
      "logo": null,
      "metadata": {
        "key": "value"
      },
      "owned_by": "ed0120CE7FA46C9DCE7EA4B125E2E36BDB63EA33073E7590AC92816AE1E861B7048B03@wonderland",
      "accounts": 3,
      "assets": 1,
      "nfts": 1
    }
  ]
}
