src/snapshots/iroha_explorer__repo__tests__list_txs.snap
---
source: src/repo.rs
expression: txs.pagination
---
Pagination {
    page: BigInt(
        4,
    ),
    per_page: BigInt(
        5,
    ),
    total_pages: BigInt(
        4,
    ),
    total_items: BigInt(
        18,
    ),
}
